# C-Zaliczenie

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  wstępny_projekt_terminal.cpp
BioAnalyzerDLL/: BioAnalyzerDLL.cpp  CMakeLists.txt  dllmain.cpp
Useful_Tutorials/AppTest/: AppTest.sln  AppTest.vcxproj  MathDynamic.h  main.cpp
Useful_Tutorials/AppTest/AppTest/x64/Debug/: AppTest.exe.recipe
Useful_Tutorials/AppTest/AppTest/x64/Debug/AppTest.tlog/: AppTest.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Useful_Tutorials/MathDynamic/: MathDynamic.cpp  MathDynamic.h  MathDynamic.sln  MathDynamic.vcxproj
Useful_Tutorials/MathDynamic/MathDynamic/x64/Debug/: MathDynamic.dll.recipe
Useful_Tutorials/MathDynamic/MathDynamic/x64/Debug/MathDynamic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MathDynamic.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Useful_Tutorials/MathDynamic/x64/Debug/: MathDynamic.exp
Useful_Tutorials/MathStatic/: MathStatic.h  MathStatic.sln  MathStatic.vcxproj  Math_Static.cpp
Useful_Tutorials/MathStatic/MathStatic/x64/Debug/MathStatic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  MathStatic.lastbuildstate
